# QtWidgetsApplication1

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  GeoidQuery.cpp  GeoidQuery.h  HGTCollection.cpp  HGTCollection.h  HGTReader.cpp  HGTReader.h  MainWindow.cpp  MainWindow.h  main.cpp
